test/sema/struct_redeclared.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32,
}

fn S() -> void {
}

struct S {
// CHECK: [[# @LINE - 1 ]]:1: error: redeclaration of 'S'
  x: i32,
}

fn main() -> void {
}
